# JNIProject

./: README.md  build.gradle  settings.gradle
anr/: build.gradle
anr/src/androidTest/java/com/zhaoyu/anr/: ExampleInstrumentedTest.kt
anr/src/main/: AndroidManifest.xml
anr/src/main/java/com/zhaoyu/anr/: Elapse.kt  ElapseCLIService.kt  ElapseCpuTimeTracker.kt  ElapseDumper.kt  ElapseHandler.kt  ElapseKeyMessages.kt  ElapseLogger.kt  ElapseMonitor.kt  ElapseOptions.kt  ElapseRecord.kt  ElapseTimeLine.kt  Util.kt
anr/src/test/java/com/zhaoyu/anr/: ExampleUnitTest.kt
app/: build.gradle
app/src/androidTest/java/com/example/jniproject/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  mylog.cpp  native-lib.cpp
app/src/main/java/com/example/jniproject/: MainActivity.kt  Utils.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/jniproject/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
nativeActivity/: build.gradle
nativeActivity/src/androidTest/java/com/hyundai/car/nativeactivity/: ExampleInstrumentedTest.java
nativeActivity/src/main/: AndroidManifest.xml
nativeActivity/src/main/cpp/: CMakeLists.txt  main.cpp
nativeActivity/src/test/java/com/hyundai/car/nativeactivity/: ExampleUnitTest.java
zcrash_lib/: build.gradle
zcrash_lib/src/androidTest/java/com/android/car/zcrash/: ExampleInstrumentedTest.kt
zcrash_lib/src/androidTest/java/com/android/car/zcrash_lib/: ExampleInstrumentedTest.kt
zcrash_lib/src/main/cpp/: CMakeLists.txt  mylog.h  zcrash_lib.cpp
zcrash_lib/src/main/cpp/common/: zc_common_init.cpp  zc_common_init.h
zcrash_lib/src/main/cpp/demo/: zcrash_lib.cpp  zcrash_shared.cpp  zcrash_static.cpp
zcrash_lib/src/main/cpp/zcrash/: zc_common.cpp  zc_common.h  zc_jni.cpp  zc_jni.h  zc_test.c  zc_test.h
zcrash_lib/src/main/java/com/android/car/zcrash/: ActivityMonitor.java  AnrHandler.java  DefaultLogger.java  Errno.java  FileManager.java  ICrashCallback.java  ILibLoader.java  ILogger.java  JavaCrashHandler.java  NativeHandler.java  TombstoneManager.java  TombstoneParser.java  Util.java  Version.java  ZCrash.java
zcrash_lib/src/main/java/com/android/car/zcrash/demo/: Person.kt  Static.java
zcrash_lib/src/main/java/com/android/car/zcrash_lib/: NativeLib.kt  ZCrash.java
zcrash_lib/src/main/java/com/android/car/zcrash_lib/demo/: NativeLib.java  Person.kt  Shared.java  Static.java
zcrash_lib/src/test/java/com/android/car/zcrash/: ExampleUnitTest.kt
zcrash_lib/src/test/java/com/android/car/zcrash_lib/: ExampleUnitTest.kt
